
= rufus-lua CHANGELOG.txt


== rufus-lua - 1.0.0    not yet released

- implemented #[]=, #objlen and #size for table
- fixed bug when pushing floats on the stack (float --> double)
- added State#function for defining Ruby functions (callbacks) available via Lua


== rufus-lua - 0.1.0    released 2009/03/16

- initial release
